--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ body {
     border-radius: 5px;
     transition: color 0.3s ease, transform 0.3s ease;
     white-space: nowrap;
-    background-color: rgb(231, 231, 231);
-    ;
+
+
 }
 
 .menu li a:hover {
     color: rgb(18, 41, 67);
     transform: scale(110%);
-    background-color: rgb(18, 41, 67);
+    background-color: #f0f0f0;
 
 }
 
